--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         <div class="card project-card">
           <img src="https://source.unsplash.com/600x300/?coding,app" class="card-img-top" alt="Project 1">
           <div class="card-body">
-            <h5 class="card-title">Inventori Bengkel</h5>
+            <h5 class="card-title">laundry</h5>
             <p class="card-text">Aplikasi Laravel untuk mengelola alat, sparepart, peminjaman, dan laporan keuangan.</p>
-            <a href="https://github.com/username/inventori-bengkel" target="_blank" class="btn btn-primary">Lihat di GitHub</a>
+            <a href="https://github.com/kurniawanrpl/laundy" target="_blank" class="btn btn-primary">Lihat di GitHub</a>
           </div>
         </div>
       </div>
