--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
          
           <div class="card-body">
             <h5 class="card-title">laundry</h5>
-            <p class="card-text">Aplikasi Laravel untuk mengelola alat, sparepart, peminjaman, dan laporan keuangan.</p>
+            <p class="card-text">Aplikasi laundry framework laravel 10 dengan pembayaran menggunakan midtrans..</p>
             <a href="https://github.com/kurniawanrpl/laundy" target="_blank" class="btn btn-primary">Lihat di GitHub</a>
           </div>
         </div>
